[BUFFER] Only mark a drained node as stale after 4hrs (#371)
* Change DRAINED_NODES_KEEP_TIMEOUT to 4hrs

Galaxy query runs at most 4hrs

* Only mark a drained node as stale after 4hrs

(cherry picked from commit 77945b560b06e266651d8ed4d2ff0f6bab1370c5)